--- a/src/main/resources/static/hello.html
+++ b/src/main/resources/static/hello.html
@@ -5,6 +5,8 @@
     <title>Hello world</title>
 </head>
 <body>
-<h1>Hello World!!</h1>
+<div class="ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" title="YouTube video" allowfullscreen></iframe>
+</div>
 </body>
 </html>
